<resources>
    <string name="app_name">YouP3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="go_home">Home</string>
    <string name="about">About</string>
    <string name="youp3_youtube_to_mp3">YouP3</string>
    <string name="dev_mail">pratimdevonplay@gmail.com</string>
    <string name="dsl">This application is only to be used for personal purposes. Please read the TOS Section.</string>
    <string name="lsc">YouP3 is licensed under the terms of Apache 2.0 license.\n</string>
    <string name="lsc2">Application logo,status logos and theme logos are copyright of the developer.Additionally, some icons have been distributed under the CC-BY 4.0 license and are copyrighted by Google, Inc.\n\nNavBar Cover Art by developer\n</string>
    <string name="license">License</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="http_github_com_exploitr_login">http://github.com/exploitr/youp3</string>
    <string name="http_exploitr_wordpress_com">http://exploitrme.wordpress.com</string>
    <string name="whois">Copyrighted by ExploiTR / Apache 2.0</string>
    <string name="TOS">TOS</string>
    <string name="textlast">As written in Youtube Terms of Service,\n\n"You shall not download any Content unless you see a “download” or similar link displayed by YouTube on the Service for that Content.You shall not copy, reproduce, make available online or electronically transmit, publish, adapt, distribute, transmit, broadcast, display, sell, license, or otherwise exploit any Content for any other purposes without the prior written consent of YouTube or the respective licensors of the Content. YouTube and its licensors reserve all rights not expressly granted in and to the Service and the Content." [Source: https://www.youtube.com/static?template=terms ( goto section 5B)].\n\nSo, You are violating Youtube TOS while downloading and saving media content from youtube offline. The developer isn\'t intended to do that and doesn\'t support that, and takes NO responsibility for what you do using YouP3.</string>
    <string name="go_exit">Exit</string>
    <string name="go_settings">Settings</string>
    <string name="fullscreen_mode">Fullscreen Mode</string>
    <string name="remove_toolbar_experimental">Remove Toolbar </string>
    <string name="go_downloads">Downloads</string>
    <string name="no_downloads">No Downloads</string>
    <string name="sample_name">Sample Name</string>
    <string name="desktop_mode">Desktop Mode (beta)</string>
    <string name="_5_mb">5 MB</string>
    <string name="normal_des">WYSN : Basic Mode uses WebView API(s), and it uses a normal API which is written to work in this way. It may be unstable, can\'t bypass ads, provides only AUDIO files (mp3) but normally doesn\'t fail anyway.</string>
    <string name="adv_des">WYSN : Advanced Mode uses a library which also depends on a library which depends on - How Google writes YouTube\'s \'JavaScript(s)\'. So, though it provides options to download much type of video/audio(s) it can fail. Also, it\'s written by third-party, so support also can be stopped from them.</string>
    <string name="bookmark">Bookmark</string>
    <string name="show_bookmarks">Show Bookmarks</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="go_pages">Pages</string>
    <string name="osl">Open Source Licenses</string>
    <string name="please_have_patience">Please have patience…</string>
    <string name="report_issue">Report Issue</string>
    <string name="okay">Okay</string>
    <string name="browsing_configuration">Browsing Configuration</string>
    <string name="download_folder">Download Folder</string>
    <string name="sdcard">/sdcard/</string>
    <string name="wrong_path_set_please_correct">Wrong Path Is Set , Please Correct It</string>
    <string name="_search">Search</string>
    <string name="_music">Music</string>
    <string name="_96_kbps">96k</string>
    <string name="_128_kbps">128k</string>
    <string name="_192_kbps">192k</string>
    <string name="music_bitrate_selection">Music Bitrate Selection</string>
    <string name="_video">Video</string>
    <string name="_144_p">144P</string>
    <string name="_240_p">240P</string>
    <string name="_320P_text">360P</string>
    <string name="_720_p">720P</string>
    <string name="_1080_p">1080P</string>
    <string name="_480_p">480P</string>
    <string name="_2160_p_4k">4K</string>
    <string name="video_silent">Video(Slient)</string>
    <string name="dismiss">Dismiss</string>
    <string name="_1440_p">1440P</string>
    <string name="_160_k">160K</string>
    <string name="_64_k">64K</string>
    <string name="_agree">I agree</string>
    <string name="download_mode">Download Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="clear">Clear</string>
    <string name="ent_fname">Enter File Name To Save</string>
    <string name="ent_fname_noext">Simple Name Without Extension</string>
    <string name="invalid_characters_detected">Invalid Characters Detected</string>
    <string name="delete_download_history">Delete Download History</string>
    <string name="some_filename_sample">some_filename_sample_</string>
    <string name="delete_file_too">Delete file too ?</string>
    <string name="bug_report">Bug Report</string>
    <string name="audio_converter">Audio Converter</string>
    <string name="input_file">Input File</string>
    <string name="select_audio_file">Select Audio File</string>
    <string name="edit_file_audio">edit file audio</string>
    <string name="output_file_format">Output File Format</string>
    <string name="please_wait_a_minute">Loading FFMPEG, wait.</string>
    <string name="mp3">MP3</string>
    <string name="wav">WAV</string>
    <string name="wma">WMA</string>
    <string name="aac">AAC</string>
    <string name="m4a">M4A</string>
    <string name="flac">FLAC</string>
    <string name="output_file_directory">Output File Directory</string>
</resources>