<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E0E0"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/youp3_youtube_to_mp3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/whois"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/http_exploitr_wordpress_com"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/giturl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="3dp"
                    android:text="@string/http_github_com_exploitr_login"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disclaimer"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dsl"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lsc"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lsc2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/TOS"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textlast" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/osl"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/osl" />

    <Button
        android:id="@+id/OK"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/okay" />

</LinearLayout>
