<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:title="@string/_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:orderInCategory="1"
        android:title="@string/bookmark"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_show_bookmarks"
        android:icon="@drawable/ic_bookmarks"
        android:orderInCategory="2"
        android:title="@string/show_bookmarks"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>