<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/ent_fname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/ent_fname_noext"
        android:inputType="textMultiLine"
        android:minLines="2"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/in_val_ch"
        android:text="@string/invalid_characters_detected"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textColor="@android:color/holo_red_dark"
        android:layout_height="wrap_content" />

</LinearLayout>